--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Login to AWS ECR
-        id: login-ecr
+      - name: AWS ECR Login
         uses: aws-actions/amazon-ecr-login@v1
         with:
           mask-password: true
           registry-type: private
           skip-logout: false
+
+      # - name: Login to AWS ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v1
+      #   with:
+      #     mask-password: true
+      #     registry-type: private
+      #     skip-logout: false
       - name: Build, push docker image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
