--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Login to AWS ECR
+      #- name: Login to AWS ECR
       - name: AWS ECR Login
         uses: aws-actions/amazon-ecr-login@v1
         with:
