--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: aws-deploy
-          IMAGE_TAG: new
+          IMAGE_TAG: latest
         run: |-
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
@@ -37,7 +37,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: aws-deploy
-          IMAGE_TAG: new
+          IMAGE_TAG: latest
           AWS_REGION: ap-south-1
 #          AWS_DEFAULT_REGION: ap-south-1
         uses: appleboy/ssh-action@master
