--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   PRIVATE_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
   SERVER_PUBLIC_IP: ${{ secrets.AWS_PUBLIC_KEY }}
-  REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+  #REGISTRY: ${{ steps.login-ecr.outputs.registry }}
   IMAGE_TAG: latest
   
 
@@ -30,7 +30,8 @@ jobs:
         # uses: aws-actions/amazon-ecr-login@v1
       - name: Build, push docker image
         env:
-          #REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REGISTRY: ${{ secrets.REGISTRY }}
+         # REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: aws-deploy
           IMAGE_TAG: latest
         run: |-
@@ -38,7 +39,8 @@ jobs:
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
       - name: Deploy docker image to EC2
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REGISTRY: ${{ secrets.REGISTRY }}
+#          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: aws-deploy
           IMAGE_TAG: latest
           AWS_REGION: ap-south-1
