--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   PRIVATE_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
   SERVER_PUBLIC_IP: ${{ secrets.AWS_PUBLIC_KEY }}
+  ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
   #REGISTRY: ${{ steps.login-ecr.outputs.registry }}
   IMAGE_TAG: latest
   
@@ -30,7 +31,8 @@ jobs:
         # uses: aws-actions/amazon-ecr-login@v1
       - name: Build, push docker image
         env:
-          REGISTRY: ${{ secrets.REGISTRY }}
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+          #REGISTRY: ${{ secrets.REGISTRY }}
          # REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: aws-deploy
           IMAGE_TAG: latest
@@ -39,7 +41,7 @@ jobs:
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
       - name: Deploy docker image to EC2
         env:
-          REGISTRY: ${{ secrets.REGISTRY }}
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
 #          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: aws-deploy
           IMAGE_TAG: latest
